lib/pk2000/grammar.rb
module Pk2000
  include Treetop::Runtime

  def root
    @root || :program
  end

  module Program0
    def number
      elements[1]
    end

    def randauszug
      elements[2]
    end

    def lines
      elements[4]
    end

  end

  def _nt_program
    start_index = index
    if node_cache[:program].has_key?(index)
      cached = node_cache[:program][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index("P", index) == index
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("P")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_number
      s1 << r3
      if r3
        r4 = _nt_randauszug
        s1 << r4
        if r4
          if input.index("\n", index) == index
            r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("\n")
            r5 = nil
          end
          s1 << r5
          if r5
            r6 = _nt_lines
            s1 << r6
            if r6
              if input.index("\nEND", index) == index
                r7 = instantiate_node(SyntaxNode,input, index...(index + 4))
                @index += 4
              else
                terminal_parse_failure("\nEND")
                r7 = nil
              end
              s1 << r7
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(PKMethodNode,input, i1...index, s1)
      r1.extend(Program0)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r8 = _nt_lines
      if r8
        r0 = r8
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:program][start_index] = r0

    return r0
  end

  module Randauszug0
    def vTuple
      elements[0]
    end

    def rTuple
      elements[2]
    end
  end

  def _nt_randauszug
    start_index = index
    if node_cache[:randauszug].has_key?(index)
      cached = node_cache[:randauszug][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_vTuple
    s0 << r1
    if r1
      if input.index("=>", index) == index
        r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure("=>")
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_rTuple
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Randauszug0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:randauszug][start_index] = r0

    return r0
  end

  module VTuple0
    def type
      elements[1]
    end

  end

  module VTuple1
    def type
      elements[1]
    end

    def type
      elements[3]
    end

  end

  module VTuple2
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

  end

  module VTuple3
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

    def type
      elements[7]
    end

  end

  module VTuple4
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

    def type
      elements[7]
    end

    def type
      elements[9]
    end

  end

  module VTuple5
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

    def type
      elements[7]
    end

    def type
      elements[9]
    end

    def type
      elements[11]
    end

  end

  module VTuple6
	 def toRuby
	    # only need comma-delimited list of var-names
	    masgn = text_value.gsub(/\(|\)|\[[^V]*\]/, "").downcase.split(",")
    sexp = s(:args)
	    masgn.each { |arg| sexp << arg.to_sym }
	    sexp
	 end
  end

  def _nt_vTuple
    start_index = index
    if node_cache[:vTuple].has_key?(index)
      cached = node_cache[:vTuple][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index("(V0[:", index) == index
      r2 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure("(V0[:")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_type
      s1 << r3
      if r3
        if input.index("])", index) == index
          r4 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure("])")
          r4 = nil
        end
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(VTuple0)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
      r0.extend(VTuple6)
    else
      i5, s5 = index, []
      if input.index("(V0[:", index) == index
        r6 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure("(V0[:")
        r6 = nil
      end
      s5 << r6
      if r6
        r7 = _nt_type
        s5 << r7
        if r7
          if input.index("],V1[:", index) == index
            r8 = instantiate_node(SyntaxNode,input, index...(index + 6))
            @index += 6
          else
            terminal_parse_failure("],V1[:")
            r8 = nil
          end
          s5 << r8
          if r8
            r9 = _nt_type
            s5 << r9
            if r9
              if input.index("])", index) == index
                r10 = instantiate_node(SyntaxNode,input, index...(index + 2))
                @index += 2
              else
                terminal_parse_failure("])")
                r10 = nil
              end
              s5 << r10
            end
          end
        end
      end
      if s5.last
        r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        r5.extend(VTuple1)
      else
        self.index = i5
        r5 = nil
      end
      if r5
        r0 = r5
        r0.extend(VTuple6)
      else
        i11, s11 = index, []
        if input.index("(V0[:", index) == index
          r12 = instantiate_node(SyntaxNode,input, index...(index + 5))
          @index += 5
        else
          terminal_parse_failure("(V0[:")
          r12 = nil
        end
        s11 << r12
        if r12
          r13 = _nt_type
          s11 << r13
          if r13
            if input.index("],V1[:", index) == index
              r14 = instantiate_node(SyntaxNode,input, index...(index + 6))
              @index += 6
            else
              terminal_parse_failure("],V1[:")
              r14 = nil
            end
            s11 << r14
            if r14
              r15 = _nt_type
              s11 << r15
              if r15
                if input.index("],V2[:", index) == index
                  r16 = instantiate_node(SyntaxNode,input, index...(index + 6))
                  @index += 6
                else
                  terminal_parse_failure("],V2[:")
                  r16 = nil
                end
                s11 << r16
                if r16
                  r17 = _nt_type
                  s11 << r17
                  if r17
                    if input.index("])", index) == index
                      r18 = instantiate_node(SyntaxNode,input, index...(index + 2))
                      @index += 2
                    else
                      terminal_parse_failure("])")
                      r18 = nil
                    end
                    s11 << r18
                  end
                end
              end
            end
          end
        end
        if s11.last
          r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
          r11.extend(VTuple2)
        else
          self.index = i11
          r11 = nil
        end
        if r11
          r0 = r11
          r0.extend(VTuple6)
        else
          i19, s19 = index, []
          if input.index("(V0[:", index) == index
            r20 = instantiate_node(SyntaxNode,input, index...(index + 5))
            @index += 5
          else
            terminal_parse_failure("(V0[:")
            r20 = nil
          end
          s19 << r20
          if r20
            r21 = _nt_type
            s19 << r21
            if r21
              if input.index("],V1[:", index) == index
                r22 = instantiate_node(SyntaxNode,input, index...(index + 6))
                @index += 6
              else
                terminal_parse_failure("],V1[:")
                r22 = nil
              end
              s19 << r22
              if r22
                r23 = _nt_type
                s19 << r23
                if r23
                  if input.index("],V2[:", index) == index
                    r24 = instantiate_node(SyntaxNode,input, index...(index + 6))
                    @index += 6
                  else
                    terminal_parse_failure("],V2[:")
                    r24 = nil
                  end
                  s19 << r24
                  if r24
                    r25 = _nt_type
                    s19 << r25
                    if r25
                      if input.index("],V3[:", index) == index
                        r26 = instantiate_node(SyntaxNode,input, index...(index + 6))
                        @index += 6
                      else
                        terminal_parse_failure("],V3[:")
                        r26 = nil
                      end
                      s19 << r26
                      if r26
                        r27 = _nt_type
                        s19 << r27
                        if r27
                          if input.index("])", index) == index
                            r28 = instantiate_node(SyntaxNode,input, index...(index + 2))
                            @index += 2
                          else
                            terminal_parse_failure("])")
                            r28 = nil
                          end
                          s19 << r28
                        end
                      end
                    end
                  end
                end
              end
            end
          end
          if s19.last
            r19 = instantiate_node(SyntaxNode,input, i19...index, s19)
            r19.extend(VTuple3)
          else
            self.index = i19
            r19 = nil
          end
          if r19
            r0 = r19
            r0.extend(VTuple6)
          else
            i29, s29 = index, []
            if input.index("(V0[:", index) == index
              r30 = instantiate_node(SyntaxNode,input, index...(index + 5))
              @index += 5
            else
              terminal_parse_failure("(V0[:")
              r30 = nil
            end
            s29 << r30
            if r30
              r31 = _nt_type
              s29 << r31
              if r31
                if input.index("],V1[:", index) == index
                  r32 = instantiate_node(SyntaxNode,input, index...(index + 6))
                  @index += 6
                else
                  terminal_parse_failure("],V1[:")
                  r32 = nil
                end
                s29 << r32
                if r32
                  r33 = _nt_type
                  s29 << r33
                  if r33
                    if input.index("],V2[:", index) == index
                      r34 = instantiate_node(SyntaxNode,input, index...(index + 6))
                      @index += 6
                    else
                      terminal_parse_failure("],V2[:")
                      r34 = nil
                    end
                    s29 << r34
                    if r34
                      r35 = _nt_type
                      s29 << r35
                      if r35
                        if input.index("],V3[:", index) == index
                          r36 = instantiate_node(SyntaxNode,input, index...(index + 6))
                          @index += 6
                        else
                          terminal_parse_failure("],V3[:")
                          r36 = nil
                        end
                        s29 << r36
                        if r36
                          r37 = _nt_type
                          s29 << r37
                          if r37
                            if input.index("],V4[:", index) == index
                              r38 = instantiate_node(SyntaxNode,input, index...(index + 6))
                              @index += 6
                            else
                              terminal_parse_failure("],V4[:")
                              r38 = nil
                            end
                            s29 << r38
                            if r38
                              r39 = _nt_type
                              s29 << r39
                              if r39
                                if input.index("])", index) == index
                                  r40 = instantiate_node(SyntaxNode,input, index...(index + 2))
                                  @index += 2
                                else
                                  terminal_parse_failure("])")
                                  r40 = nil
                                end
                                s29 << r40
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
            if s29.last
              r29 = instantiate_node(SyntaxNode,input, i29...index, s29)
              r29.extend(VTuple4)
            else
              self.index = i29
              r29 = nil
            end
            if r29
              r0 = r29
              r0.extend(VTuple6)
            else
              i41, s41 = index, []
              if input.index("(V0[:", index) == index
                r42 = instantiate_node(SyntaxNode,input, index...(index + 5))
                @index += 5
              else
                terminal_parse_failure("(V0[:")
                r42 = nil
              end
              s41 << r42
              if r42
                r43 = _nt_type
                s41 << r43
                if r43
                  if input.index("],V1[:", index) == index
                    r44 = instantiate_node(SyntaxNode,input, index...(index + 6))
                    @index += 6
                  else
                    terminal_parse_failure("],V1[:")
                    r44 = nil
                  end
                  s41 << r44
                  if r44
                    r45 = _nt_type
                    s41 << r45
                    if r45
                      if input.index("],V2[:", index) == index
                        r46 = instantiate_node(SyntaxNode,input, index...(index + 6))
                        @index += 6
                      else
                        terminal_parse_failure("],V2[:")
                        r46 = nil
                      end
                      s41 << r46
                      if r46
                        r47 = _nt_type
                        s41 << r47
                        if r47
                          if input.index("],V3[:", index) == index
                            r48 = instantiate_node(SyntaxNode,input, index...(index + 6))
                            @index += 6
                          else
                            terminal_parse_failure("],V3[:")
                            r48 = nil
                          end
                          s41 << r48
                          if r48
                            r49 = _nt_type
                            s41 << r49
                            if r49
                              if input.index("],V4[:", index) == index
                                r50 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                @index += 6
                              else
                                terminal_parse_failure("],V4[:")
                                r50 = nil
                              end
                              s41 << r50
                              if r50
                                r51 = _nt_type
                                s41 << r51
                                if r51
                                  if input.index("],V5[:", index) == index
                                    r52 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                    @index += 6
                                  else
                                    terminal_parse_failure("],V5[:")
                                    r52 = nil
                                  end
                                  s41 << r52
                                  if r52
                                    r53 = _nt_type
                                    s41 << r53
                                    if r53
                                      if input.index("])", index) == index
                                        r54 = instantiate_node(SyntaxNode,input, index...(index + 2))
                                        @index += 2
                                      else
                                        terminal_parse_failure("])")
                                        r54 = nil
                                      end
                                      s41 << r54
                                    end
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
              if s41.last
                r41 = instantiate_node(SyntaxNode,input, i41...index, s41)
                r41.extend(VTuple5)
              else
                self.index = i41
                r41 = nil
              end
              if r41
                r0 = r41
                r0.extend(VTuple6)
              else
                self.index = i0
                r0 = nil
              end
            end
          end
        end
      end
    end

    node_cache[:vTuple][start_index] = r0

    return r0
  end

  module RTuple0
    def type
      elements[1]
    end

  end

  module RTuple1
    def type
      elements[1]
    end

  end

  module RTuple2
    def type
      elements[1]
    end

    def type
      elements[3]
    end

  end

  module RTuple3
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

  end

  module RTuple4
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

    def type
      elements[7]
    end

  end

  module RTuple5
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

    def type
      elements[7]
    end

    def type
      elements[9]
    end

  end

  module RTuple6
    def type
      elements[1]
    end

    def type
      elements[3]
    end

    def type
      elements[5]
    end

    def type
      elements[7]
    end

    def type
      elements[9]
    end

    def type
      elements[11]
    end

  end

  def _nt_rTuple
    start_index = index
    if node_cache[:rTuple].has_key?(index)
      cached = node_cache[:rTuple][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index("R0[:", index) == index
      r2 = instantiate_node(SyntaxNode,input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure("R0[:")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_type
      s1 << r3
      if r3
        if input.index("]", index) == index
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("]")
          r4 = nil
        end
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(PKVariableNode,input, i1...index, s1)
      r1.extend(RTuple0)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i5, s5 = index, []
      if input.index("(R0[:", index) == index
        r6 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure("(R0[:")
        r6 = nil
      end
      s5 << r6
      if r6
        r7 = _nt_type
        s5 << r7
        if r7
          if input.index("])", index) == index
            r8 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure("])")
            r8 = nil
          end
          s5 << r8
        end
      end
      if s5.last
        r5 = instantiate_node(PKVariableNode,input, i5...index, s5)
        r5.extend(RTuple1)
      else
        self.index = i5
        r5 = nil
      end
      if r5
        r0 = r5
      else
        i9, s9 = index, []
        if input.index("(R0[:", index) == index
          r10 = instantiate_node(SyntaxNode,input, index...(index + 5))
          @index += 5
        else
          terminal_parse_failure("(R0[:")
          r10 = nil
        end
        s9 << r10
        if r10
          r11 = _nt_type
          s9 << r11
          if r11
            if input.index("],R1[:", index) == index
              r12 = instantiate_node(SyntaxNode,input, index...(index + 6))
              @index += 6
            else
              terminal_parse_failure("],R1[:")
              r12 = nil
            end
            s9 << r12
            if r12
              r13 = _nt_type
              s9 << r13
              if r13
                if input.index("])", index) == index
                  r14 = instantiate_node(SyntaxNode,input, index...(index + 2))
                  @index += 2
                else
                  terminal_parse_failure("])")
                  r14 = nil
                end
                s9 << r14
              end
            end
          end
        end
        if s9.last
          r9 = instantiate_node(PKVariableNode,input, i9...index, s9)
          r9.extend(RTuple2)
        else
          self.index = i9
          r9 = nil
        end
        if r9
          r0 = r9
        else
          i15, s15 = index, []
          if input.index("(R0[:", index) == index
            r16 = instantiate_node(SyntaxNode,input, index...(index + 5))
            @index += 5
          else
            terminal_parse_failure("(R0[:")
            r16 = nil
          end
          s15 << r16
          if r16
            r17 = _nt_type
            s15 << r17
            if r17
              if input.index("],R1[:", index) == index
                r18 = instantiate_node(SyntaxNode,input, index...(index + 6))
                @index += 6
              else
                terminal_parse_failure("],R1[:")
                r18 = nil
              end
              s15 << r18
              if r18
                r19 = _nt_type
                s15 << r19
                if r19
                  if input.index("],R2[:", index) == index
                    r20 = instantiate_node(SyntaxNode,input, index...(index + 6))
                    @index += 6
                  else
                    terminal_parse_failure("],R2[:")
                    r20 = nil
                  end
                  s15 << r20
                  if r20
                    r21 = _nt_type
                    s15 << r21
                    if r21
                      if input.index("])", index) == index
                        r22 = instantiate_node(SyntaxNode,input, index...(index + 2))
                        @index += 2
                      else
                        terminal_parse_failure("])")
                        r22 = nil
                      end
                      s15 << r22
                    end
                  end
                end
              end
            end
          end
          if s15.last
            r15 = instantiate_node(PKVariableNode,input, i15...index, s15)
            r15.extend(RTuple3)
          else
            self.index = i15
            r15 = nil
          end
          if r15
            r0 = r15
          else
            i23, s23 = index, []
            if input.index("(R0[:", index) == index
              r24 = instantiate_node(SyntaxNode,input, index...(index + 5))
              @index += 5
            else
              terminal_parse_failure("(R0[:")
              r24 = nil
            end
            s23 << r24
            if r24
              r25 = _nt_type
              s23 << r25
              if r25
                if input.index("],R1[:", index) == index
                  r26 = instantiate_node(SyntaxNode,input, index...(index + 6))
                  @index += 6
                else
                  terminal_parse_failure("],R1[:")
                  r26 = nil
                end
                s23 << r26
                if r26
                  r27 = _nt_type
                  s23 << r27
                  if r27
                    if input.index("],R2[:", index) == index
                      r28 = instantiate_node(SyntaxNode,input, index...(index + 6))
                      @index += 6
                    else
                      terminal_parse_failure("],R2[:")
                      r28 = nil
                    end
                    s23 << r28
                    if r28
                      r29 = _nt_type
                      s23 << r29
                      if r29
                        if input.index("],R3[:", index) == index
                          r30 = instantiate_node(SyntaxNode,input, index...(index + 6))
                          @index += 6
                        else
                          terminal_parse_failure("],R3[:")
                          r30 = nil
                        end
                        s23 << r30
                        if r30
                          r31 = _nt_type
                          s23 << r31
                          if r31
                            if input.index("])", index) == index
                              r32 = instantiate_node(SyntaxNode,input, index...(index + 2))
                              @index += 2
                            else
                              terminal_parse_failure("])")
                              r32 = nil
                            end
                            s23 << r32
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
            if s23.last
              r23 = instantiate_node(PKVariableNode,input, i23...index, s23)
              r23.extend(RTuple4)
            else
              self.index = i23
              r23 = nil
            end
            if r23
              r0 = r23
            else
              i33, s33 = index, []
              if input.index("(R0[:", index) == index
                r34 = instantiate_node(SyntaxNode,input, index...(index + 5))
                @index += 5
              else
                terminal_parse_failure("(R0[:")
                r34 = nil
              end
              s33 << r34
              if r34
                r35 = _nt_type
                s33 << r35
                if r35
                  if input.index("],R1[:", index) == index
                    r36 = instantiate_node(SyntaxNode,input, index...(index + 6))
                    @index += 6
                  else
                    terminal_parse_failure("],R1[:")
                    r36 = nil
                  end
                  s33 << r36
                  if r36
                    r37 = _nt_type
                    s33 << r37
                    if r37
                      if input.index("],R2[:", index) == index
                        r38 = instantiate_node(SyntaxNode,input, index...(index + 6))
                        @index += 6
                      else
                        terminal_parse_failure("],R2[:")
                        r38 = nil
                      end
                      s33 << r38
                      if r38
                        r39 = _nt_type
                        s33 << r39
                        if r39
                          if input.index("],R3[:", index) == index
                            r40 = instantiate_node(SyntaxNode,input, index...(index + 6))
                            @index += 6
                          else
                            terminal_parse_failure("],R3[:")
                            r40 = nil
                          end
                          s33 << r40
                          if r40
                            r41 = _nt_type
                            s33 << r41
                            if r41
                              if input.index("],R4[:", index) == index
                                r42 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                @index += 6
                              else
                                terminal_parse_failure("],R4[:")
                                r42 = nil
                              end
                              s33 << r42
                              if r42
                                r43 = _nt_type
                                s33 << r43
                                if r43
                                  if input.index("])", index) == index
                                    r44 = instantiate_node(SyntaxNode,input, index...(index + 2))
                                    @index += 2
                                  else
                                    terminal_parse_failure("])")
                                    r44 = nil
                                  end
                                  s33 << r44
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
              if s33.last
                r33 = instantiate_node(PKVariableNode,input, i33...index, s33)
                r33.extend(RTuple5)
              else
                self.index = i33
                r33 = nil
              end
              if r33
                r0 = r33
              else
                i45, s45 = index, []
                if input.index("(R0[:", index) == index
                  r46 = instantiate_node(SyntaxNode,input, index...(index + 5))
                  @index += 5
                else
                  terminal_parse_failure("(R0[:")
                  r46 = nil
                end
                s45 << r46
                if r46
                  r47 = _nt_type
                  s45 << r47
                  if r47
                    if input.index("],R1[:", index) == index
                      r48 = instantiate_node(SyntaxNode,input, index...(index + 6))
                      @index += 6
                    else
                      terminal_parse_failure("],R1[:")
                      r48 = nil
                    end
                    s45 << r48
                    if r48
                      r49 = _nt_type
                      s45 << r49
                      if r49
                        if input.index("],R2[:", index) == index
                          r50 = instantiate_node(SyntaxNode,input, index...(index + 6))
                          @index += 6
                        else
                          terminal_parse_failure("],R2[:")
                          r50 = nil
                        end
                        s45 << r50
                        if r50
                          r51 = _nt_type
                          s45 << r51
                          if r51
                            if input.index("],R3[:", index) == index
                              r52 = instantiate_node(SyntaxNode,input, index...(index + 6))
                              @index += 6
                            else
                              terminal_parse_failure("],R3[:")
                              r52 = nil
                            end
                            s45 << r52
                            if r52
                              r53 = _nt_type
                              s45 << r53
                              if r53
                                if input.index("],R4[:", index) == index
                                  r54 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                  @index += 6
                                else
                                  terminal_parse_failure("],R4[:")
                                  r54 = nil
                                end
                                s45 << r54
                                if r54
                                  r55 = _nt_type
                                  s45 << r55
                                  if r55
                                    if input.index("],R5[:", index) == index
                                      r56 = instantiate_node(SyntaxNode,input, index...(index + 6))
                                      @index += 6
                                    else
                                      terminal_parse_failure("],R5[:")
                                      r56 = nil
                                    end
                                    s45 << r56
                                    if r56
                                      r57 = _nt_type
                                      s45 << r57
                                      if r57
                                        if input.index("])", index) == index
                                          r58 = instantiate_node(SyntaxNode,input, index...(index + 2))
                                          @index += 2
                                        else
                                          terminal_parse_failure("])")
                                          r58 = nil
                                        end
                                        s45 << r58
                                      end
                                    end
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
                if s45.last
                  r45 = instantiate_node(PKVariableNode,input, i45...index, s45)
                  r45.extend(RTuple6)
                else
                  self.index = i45
                  r45 = nil
                end
                if r45
                  r0 = r45
                else
                  self.index = i0
                  r0 = nil
                end
              end
            end
          end
        end
      end
    end

    node_cache[:rTuple][start_index] = r0

    return r0
  end

  module Lines0
    def next
      elements[1]
    end
  end

  module Lines1
    def first
      elements[0]
    end

    def rest
      elements[1]
    end
  end

  def _nt_lines
    start_index = index
    if node_cache[:lines].has_key?(index)
      cached = node_cache[:lines][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_statement
    s0 << r1
    if r1
      i3, s3 = index, []
      if input.index("\n", index) == index
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("\n")
        r4 = nil
      end
      s3 << r4
      if r4
        r5 = _nt_lines
        s3 << r5
      end
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(Lines0)
      else
        self.index = i3
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(PKLinesNode,input, i0...index, s0)
      r0.extend(Lines1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:lines][start_index] = r0

    return r0
  end

  module Statement0
    def sub
      elements[1]
    end

  end

  def _nt_statement
    start_index = index
    if node_cache[:statement].has_key?(index)
      cached = node_cache[:statement][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_assignment
    if r1
      r0 = r1
    else
      r2 = _nt_ifThen
      if r2
        r0 = r2
      else
        r3 = _nt_while
        if r3
          r0 = r3
        else
          r4 = _nt_block
          if r4
            r0 = r4
          else
            r5 = _nt_builtIns
            if r5
              r0 = r5
            else
              r6 = _nt_term2
              if r6
                r0 = r6
              else
                i7, s7 = index, []
                if input.index("(", index) == index
                  r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure("(")
                  r8 = nil
                end
                s7 << r8
                if r8
                  r9 = _nt_statement
                  s7 << r9
                  if r9
                    if input.index(")", index) == index
                      r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure(")")
                      r10 = nil
                    end
                    s7 << r10
                  end
                end
                if s7.last
                  r7 = instantiate_node(PKBracketNode,input, i7...index, s7)
                  r7.extend(Statement0)
                else
                  self.index = i7
                  r7 = nil
                end
                if r7
                  r0 = r7
                else
                  self.index = i0
                  r0 = nil
                end
              end
            end
          end
        end
      end
    end

    node_cache[:statement][start_index] = r0

    return r0
  end

  module Assignment0
    def from
      elements[0]
    end

    def to
      elements[2]
    end
  end

  module Assignment1
    def from
      elements[0]
    end

    def to
      elements[2]
    end
  end

  module Assignment2
    def from
      elements[0]
    end

    def to
      elements[2]
    end
  end

  module Assignment3
    def toRuby
       s(:call, to.toRuby, :<=, s(:arglist, from.toRuby))
    end
  end

  def _nt_assignment
    start_index = index
    if node_cache[:assignment].has_key?(index)
      cached = node_cache[:assignment][index]
      @index = cached.interval.end if cached
      return cached
    end
